--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@criblinc/docker-names",
+  "name": "@millironx/docker-names",
   "version": "1.1.4",
   "description": "Fork of docker names for javascript",
   "files": [
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/criblio/docker-names.git"
+    "url": "git+https://github.com/MillironX/docker-names.git"
   },
   "publishConfig": {
     "access": "public"
@@ -28,12 +28,12 @@
     "docker-names",
     "docker-name"
   ],
-  "author": "Cribl",
+  "author": "MillironX",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/criblio/docker-names/issues"
+    "url": "https://github.com/MillironX/docker-names/issues"
   },
-  "homepage": "https://github.com/criblio/docker-names#readme",
+  "homepage": "https://github.com/MillironX/docker-names#readme",
   "devDependencies": {
     "@types/jest": "^26.0.22",
     "jest": "^26.6.3",
