--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "url": "git+https://github.com/MillironX/docker-names.git"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://npm.pkg.github.com"
   },
   "keywords": [
     "docker",
